# nbi

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  cli.rs  cli_commands.rs  config.rs  main.rs
src/registry/: brew.rs  crates.rs  debian.rs  domain.rs  flatpak.rs  github.rs  mod.rs  npm.rs  pypi.rs
src/server/: api.rs  mod.rs
src/tui/: handlers.rs  mod.rs  runner.rs
src/ui/: mod.rs  register.rs  search.rs  settings.rs
static/: index.html
